# MetasploitMCP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  MetasploitMCP.code-workspace  MetasploitMCP.py  README.md  TEST_README.md  console_helpers.py  console_utils.py  pyproject.toml  pytest.ini  run_tests.sh  utils.py
docs/: API.md  DEVELOPMENT.md  POETRY_MIGRATION.md
manual_tests/: README.md  conftest.py  console_fix_test.py  fastmcp_client_test.py  listener_fix_test.py  run_all_tests.py
tests/: conftest.py  test_helpers.py  test_ip_validation.py  test_options_parsing.py  test_tools_integration.py
tests/integration/: test_mcp_tools.py
tests/manual/: test_console_fix.py  test_fastmcp_client.py  test_listener_fix.py
tests/unit/: test_console_helpers.py  test_refactored_functions.py  test_utils.py
